--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,21 +2,68 @@ cmake_minimum_required(VERSION 3.13)
 project(Game)
 
 set(CMAKE_CXX_STANDARD 17)
+add_subdirectory(Test/googletest-master)
 
-add_executable(Game src/main.cpp src/Engine.cpp headers/Engine.h src/Player.cpp headers/Player.h src/Plant.cpp headers/Plant.h src/Fish.cpp headers/Fish.h src/Shop.cpp headers/Shop.h src/Pond.cpp headers/Pond.h src/House.cpp headers/House.h src/Object.cpp headers/Object.h src/TileMap.cpp headers/TileMap.h src/PlayerState.cpp headers/PlayerState.h src/StandingState.cpp headers/StandingState.h src/WalkingState.cpp headers/WalkingState.h src/FishingState.cpp headers/FishingState.h src/ShoppingState.cpp headers/ShoppingState.h src/Menu.cpp headers/Menu.h src/SleepingState.cpp headers/SleepingState.h src/PlantingState.cpp headers/PlantingState.h src/ShopMenu.cpp headers/ShopMenu.h src/HarvestingState.cpp headers/HarvestingState.h Test/PlayerFixture.cpp)
+include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR} SFML/include headers src)
 
-include_directories(headers /usr/include c:/SFML/include)
+add_executable(Game
+        src/main.cpp
+        src/Engine.cpp
+        src/Player.cpp
+        src/Plant.cpp
+        src/Fish.cpp
+        src/Shop.cpp
+        src/Pond.cpp
+        src/House.cpp
+        src/Object.cpp
+        src/TileMap.cpp
+        src/PlayerState.cpp
+        src/StandingState.cpp
+        src/WalkingState.cpp
+        src/FishingState.cpp
+        src/ShoppingState.cpp
+        src/Menu.cpp
+        src/SleepingState.cpp
+        src/PlantingState.cpp
+        src/ShopMenu.cpp
+        src/HarvestingState.cpp)
 
-add_subdirectory(headers)
-add_subdirectory(src)
-add_subdirectory(Test)
+add_executable(Test
+        Test/PlayerTest.cpp
+        Test/runAllTests.cpp
+        Test/PlayerFixture.cpp
+        src/Engine.cpp
+        src/Player.cpp
+        src/Plant.cpp
+        src/Fish.cpp
+        src/Shop.cpp
+        src/Pond.cpp
+        src/House.cpp
+        src/Object.cpp
+        src/TileMap.cpp
+        src/PlayerState.cpp
+        src/StandingState.cpp
+        src/WalkingState.cpp
+        src/FishingState.cpp
+        src/ShoppingState.cpp
+        src/Menu.cpp
+        src/SleepingState.cpp
+        src/PlantingState.cpp
+        src/ShopMenu.cpp
+        src/HarvestingState.cpp)
 
-set(SFML_ROOT c:/SFML)
+target_link_libraries(Test gtest gtest_main)
+
+include_directories(headers SFML/include)
+
+#set SFML files
+set(SFML_ROOT SFML)
 set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake_modules")
 find_package(SFML REQUIRED system window graphics network audio)
 if (SFML_FOUND)
     include_directories(${SFML_INCLUDE_DIR})
     target_link_libraries(Game ${SFML_LIBRARIES} ${SFML_DEPENDENCIES})
+    target_link_libraries(Test ${SFML_LIBRARIES} ${SFML_DEPENDENCIES})
 endif()
 
 file(COPY assets DESTINATION ${CMAKE_BINARY_DIR})
